some icons alignment issue

--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ header{
 }
 
  .floatingBox.family img {
-    padding-bottom: 21px;
+    padding-bottom: 11px;
 }
 
  .floatingBox.rewards img {
